--- a/manifest.json
+++ b/manifest.json
@@ -407,12 +407,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/export-import-database.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/export-import-database.html",
-          "hash": "yZiU+YXoL/O2iY22Y7jO1A=="
+          "hash": "Y6/vIhPZCVNHvDAfVnImxQ=="
         }
       },
       "is_incremental": false,
@@ -971,10 +974,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/db-amend-address.png",
+      "source_relative_path": "home/techguides/images/db-amend-customer.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/db-amend-address.png"
+          "relative_path": "home/techguides/images/db-amend-customer.png"
         }
       },
       "is_incremental": false,
@@ -982,10 +985,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/db-amend-customer.png",
+      "source_relative_path": "home/techguides/images/db-amend-info.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/db-amend-customer.png"
+          "relative_path": "home/techguides/images/db-amend-info.png"
         }
       },
       "is_incremental": false,
@@ -1015,6 +1018,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/db-commit-button.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/db-commit-button.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/db-copy-repo-endpoint.png",
       "output": {
         "resource": {
@@ -1026,10 +1040,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/db-deploy.png",
+      "source_relative_path": "home/techguides/images/db-deploy-button.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/db-deploy.png"
+          "relative_path": "home/techguides/images/db-deploy-button.png"
         }
       },
       "is_incremental": false,
@@ -3312,19 +3326,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "TocDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "TocDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
@@ -3333,6 +3342,11 @@
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         }
       }
