--- a/manifest.json
+++ b/manifest.json
@@ -49,15 +49,12 @@
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
       "type": "Conceptual",
       "source_relative_path": "home/architecture.md",
       "output": {
         ".html": {
           "relative_path": "home/architecture.html",
-          "hash": "H0XVmwiq0LFN6L1btFGSfQ=="
+          "hash": "ACKl6i2ZLm7p/2sMXyTEfQ=="
         }
       },
       "is_incremental": false,
@@ -124,15 +121,12 @@
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
       "type": "Conceptual",
       "source_relative_path": "home/enterprise-view.md",
       "output": {
         ".html": {
           "relative_path": "home/enterprise-view.html",
-          "hash": "6dma8RKJVT2bPfETV0P4gw=="
+          "hash": "2XJk4kZntkHRIkzgzmEanw=="
         }
       },
       "is_incremental": false,
@@ -271,6 +265,17 @@
       "output": {
         "resource": {
           "relative_path": "home/images/cloud-offering.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/images/enterprise-view.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/images/enterprise-view.png"
         }
       },
       "is_incremental": false,
@@ -4667,10 +4672,6 @@
           "details": "Processor TocDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
-        "ManagedReferenceDocumentProcessor": {
-          "can_incremental": false,
-          "incrementalPhase": "build"
-        },
         "ResourceDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
@@ -4682,6 +4683,10 @@
           "incrementalPhase": "build"
         },
         "ConceptualDocumentProcessor": {
+          "can_incremental": false,
+          "incrementalPhase": "build"
+        },
+        "ManagedReferenceDocumentProcessor": {
           "can_incremental": false,
           "incrementalPhase": "build"
         }
